<resources>
    <string name="app_name">Medicano</string>
    <string name="title_activity_medication">MedicationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_medication">Add Medication</string>
    <string name="close">Close</string>
    <string name="what_med_name_you_want_to_add">What is your med name?</string>
    <string name="medication_name">Medication Name</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_med_form">What is the form of the medication?</string>
    <string name="skip">Skip</string>
    <string name="pill">Pill</string>
    <string name="solution">Solution</string>
    <string name="injection">Injection</string>
    <string name="powder">Powder</string>
    <string name="drops">Drops</string>
    <string name="inhaler">Inhaler</string>
    <string name="other">Other</string>
    <string name="what_med_strength">What is the strength of the med?</string>
    <string name="g">g</string>
    <string name="iu">IU</string>
    <string name="mcg">mcg</string>
    <string name="meq">mEq</string>
    <string name="mg">mg</string>
    <string name="mcg_ml">mcg/ml</string>
    <string name="mg_ml">mg/ml</string>
    <string name="ml">mL</string>
    <string name="percentage_sign">%</string>
    <string name="why_are_you_taking_the_med_for">What is the reason you are taking the med for?</string>
    <string name="medication_reason">Medication reason</string>
    <string name="which_days_do_want_to_be_reminded_at">Which days do you want to be reminded at?</string>
    <string name="every_day">EveryDay</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="when_would_you_like_to_be_reminded">When would you like to be reminded?</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="specify_the_duration_of_the_med">Specify the duration of the med!</string>
    <string name="before_eating">Before eating</string>
    <string name="while_eating">While eating</string>
    <string name="after_eating">After eating</string>
    <string name="does_not_matter">Does not matter</string>
    <string name="any_instructions_with_the_med">Any instructions with the med?</string>
    <string name="is_there_any_optional_instructions">Is there any other instructions?</string>
    <string name="medication_any_instructions">Any instruction</string>
    <string name="which_icon_do_prefer">Which icon do ypu prefer?</string>
    <string name="specify_refill_reminder_data">Specify refill reminder data!</string>
    <string name="current_number_of_pills">Current number of pills</string>
    <string name="num_of_pills_to_remind_you">Num of pills to remind you</string>
    <string name="remind_me_when_reach">Remind me when reach</string>
    <string name="save">Save</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="done">Done</string>
    <string name="reminder_times">Reminders Times</string>
    <string name="schedule">Schedule</string>

    <string name="medication_sample">Panadol</string>
    <string name="strength_sample">50 g</string>
    <string name="add_dose_btn">Add Dose</string>
    <string name="reminders_lbl">Reminders</string>
    <string name="suspend_btn">Suspend</string>
    <string name="instruction_sample">Every day,Take for 10 days</string>
    <string name="refill_btn">Refill</string>
    <string name="refill_lbl">Prescription Refill</string>
    <string name="textview_how_to_use">"How to use "</string>
    <string name="select_day">Select Days</string>
    <string name="icon">Icon</string>
    <string name="med_icon">Med Icon</string>
    <string name="strength">Strength</string>
    <string name="active_meds">Active meds</string>
    <string name="inactive_meds">InActive Meds</string>
    <string name="home">Home</string>
    <string name="medicationHomes">Medications</string>
    <string name="can_not_be_empty">This field can\'t be empty!</string>
    <string name="please_restart_process">Please restart process!</string>
    <string name="strength_value">Strength Value</string>
    <string name="value">Value</string>
    <string name="strength_should_be_numeric">Strength should be numeric value!</string>
    <string name="strength_should_be_bigger_than_zero">Strength should be bigger than!</string>
    <string name="must_select_days">Must select a day at least!</string>
    <string name="enter_valid_value">Enter valid value!</string>
    <string name="value_should_be_bigger_than_zero">Value should be bigger than zero!</string>
    <string name="add_reminders_first">Please add reminders first!</string>
    <string name="instructions">Instructions</string>
    <string name="refill_reminder">Refill reminder</string>
    <string name="manage_meds_for_your_family_members">Manage Meds for your family members</string>
    <string name="med_friend_email">Add MedFriend E-mail</string>
    <string name="invite">Invite</string>
    <string name="lbl_invitations">Invitations</string>
    <string name="invitations">Invitations</string>
    <string name="take">Take</string>
    <string name="user_name">User Name</string>
    <string name="refill_amount">Refill amount</string>
</resources>